<resources>
    <string name="app_name">Music Segue</string>
    <string name="api_key">"AIzaSyBrmyj3AzRx2gMPxnXuTWjTuG2lPOAJ5WA"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail Address</string>
    <string name="phone_no">Phone Number</string>
    <string name="passwor">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_pasw">Confirm Password</string>
    <string name="str_login_btn">Login</string>
    <string name="str_signup_btn">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_id"></string>
    <string name="facebook_app_id">524843561374244</string>
    <string name="fb_login_protocol_scheme">fb524843561374244</string>
    <string name="err_fields_empty">Fields are empty</string>
    <string name="err_no_internet">No internet connection.</string>
    <string name="err_email_id">Please enter Email Id</string>
    <string name="err_email_invalid">Email Id is invalid</string>
    <string name="err_password_invalid">Password is not valid</string>
    <string name="err_password_not_match">Password does not match</string>
    <string name="txt_submit">Submit</string>
    <string name="err_user_type">Please select profile type.</string>
    <string name="err_terms">Please accept terms.</string>
    <string name="err_first_name">Enter the first name</string>
    <string name="err_country_code">Select the country code</string>
    <string name="err_last_name">Enter the last name.</string>
    <string name="err_password_empty">Please enter your password.</string>
    <string name="err_confirm_password_empty">Please enter confirm password.</string>
    <string name="err_city">Please select the city.</string>
    <string name="err_postcode">Please enter the postcode.</string>
    <string name="err_bio">Please enter your bio.</string>
    <string name="err_genre">Please select the genre.</string>
    <string name="err_expertise">Please select your expertise.</string>
    <string name="err_experience">Please select your experience.</string>
    <string name="err_password">Password must be 6 chars contains 1 uppercase letter, 1 special character and alphanumeric characters.</string>
    <string name="err_phone">Phone number must be 10 digits.</string>
    <string name="err_phone_empty">Enter your phone number.</string>
    <string name="str_exp_years">Experience *</string>
    <string name="str_talent">Talent</string>
    <string name="str_skills">Skills</string>
    <string name="str_talent_expertise">Expertise *</string>
    <string name="str_certifications">Certifications</string>
    <string name="txt_website">Website</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_email">Email *</string>
    <string name="str_phone">Phone</string>
    <string name="str_city">City *</string>
    <string name="str_post_code">PostCode *</string>
    <string name="str_country">Country *</string>
    <string name="str_state">State *</string>
    <string name="str_bio">Bio *</string>
    <string name="str_collaborators">Collaborators</string>
    <string name="str_profile">Profile</string>
    <string name="str_upcoming_events">Upcoming Events</string>
    <string name="txt_genre">Genre *</string>
    <string name="str_mp3">MP3 Songs</string>
    <string name="str_videos">Videos</string>
    <string name="str_upload_photo">Upload Photo</string>
    <string name="str_upload_audio">Upload Audio</string>
    <string name="str_genre">Genre</string>
    <string name="str_display_name">Display Name</string>
    <string name="str_contact">Contact *</string>
    <string name="str_music_video">Music Videos</string>
    <string name="txt_save">Save</string>
    <string name="txt_reset_password">Reset your Password</string>
    <string name="txt_reset_password_">Enter OTP and your new password</string>
    <string name="txt_hint_otp">Enter OTP</string>
    <string name="txt_hint_new_password">New Password</string>
    <string name="txt_reset_password_btn">Reset Password</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_hint_confirm_password">Confirm Password</string>
    <string name="err_enter_otp">Please enter an OTP.</string>
    <string name="txt_verify_account">Verify your Account</string>
    <string name="str_verify_account_txt">Enter the email and OTP to verify your account</string>
    <string name="str_hint_email">Enter the Email Id</string>
    <string name="str_hint_otp">Enter OTP</string>
    <string name="str_change_email">Change</string>
    <string name="txt_btn_verify_account">Verify Account</string>
    <string name="txt_forgot_password_txt">Please enter your registered email id and we will send you an OTP to reset your password.</string>
    <string name="txt_please_verify">Please verify your account</string>
    <string name="txt_forgot_password">Forgot your password</string>
    <string name="str_enter_contact">Mobile Number</string>
    <string name="txt_resend_otp_btn">Resend OTP</string>
    <string name="txt_complete_profile">Complete your profile</string>
    <string name="str_grade">Grade</string>
    <string name="str_active">Active</string>
    <string name="str_not_disturb">Do not disturb</string>
    <string name="str_invisible">Invisible</string>
    <string name="txt_lets_chat">Let\'s Chat</string>
    <string name="txt_experience">Experience</string>
    <string name="txt_music">Music</string>
    <string name="txt_video">Video</string>
    <string name="txt_image">Photo</string>
    <string name="txt_gigs">Gigs</string>
    <string name="txt_collaborators">Collabs</string>
    <string name="txt_activity">Activity</string>
    <string name="txt_home">Home</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_alerts"><![CDATA[Alerts & Notifications]]></string>
    <string name="txt_schedule">Schedule</string>
    <string name="txt_upload">Uploads</string>
    <string name="txt_band">Band (members)</string>
    <string name="txt_search">Search</string>
    <string name="txt_stats">Stats</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_logout">Logout</string>
    <string name="err_current_password">Current password can not be empty</string>
    <string name="err_current_password_not_correct">Current password not correct</string>
    <string name="err_bio_count">Bio should be minimum 275 characters.</string>
    <string name="message">Message</string>
    <string name="err_capacity">Enter capacity of venue</string>
    <string name="attach_error_screenshot">Attach Error Screenshot</string>
    <string name="policy1">Elroy Dias built the Music Segue app as a Commercial app. This SERVICE is provided by Elroy Dias and is intended for use as is.</string>
    <string name="policy2">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</string>
    <string name="policy3">If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</string>
    <string name="policy_heading">Information Collection and Use</string>
    <string name="policy4">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and back-end in database and is not collected by me in any way.</string>
    <string name="policy5">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.</string>
    <string name="txt_calendar">Calendar</string>
    <string-array name="arr_experience">

        <item>1-2</item>
        <item>3-5</item>
        <item>5-10</item>
        <item>10+</item>
    </string-array>
    <string-array name="arr_skills">

        <item>Lead Vocals</item>
        <item>Backing Vocals</item>
        <item>Songwriter</item>
        <item>Piano</item>
        <item>Synthesizer</item>
        <item>Drums</item>
        <item>Band</item>
        <item>Lead Guitar</item>
        <item>Bass Guitar</item>
        <item>Violin</item>
        <item>Harp</item>
        <item>Sitar</item>
        <item>Flute</item>
        <item>Clarinet</item>
        <item>Saxophone</item>
        <item>Trumpet</item>
    </string-array>
    <string-array name="arr_certification">

        <item>ABSRM</item>
        <item>Trinity</item>
        <item>Rock n Pop</item>
        <item>Gigajam</item>

    </string-array>
    <string-array name="arr_guest">

        <item>0-50</item>
        <item>51-100</item>
        <item>101-200</item>
        <item>200+</item>

    </string-array>
    <string-array name="arr_grade">

        <item>Prep</item>
        <item>G1</item>
        <item>G2</item>
        <item>G3</item>
        <item>G4</item>
        <item>G5</item>
        <item>G6</item>
        <item>G7</item>
        <item>G8</item>
        <item>Diploma</item>
        <item>Foundation</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string name="title_activity_play_video">PlayVideoActivity</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_my_band_profile">My Bands</string>
    <string name="txt_other_band">Other Bands</string>
    <string name="str_band_name">Band Name*</string>
    <string name="err_band_name">Please enter band name.</string>
    <string name="str_about_band">About Band</string>
    <string name="txt_members">Members</string>
    <string name="say_something">Say Something</string>
    <string name="by_zander_ft_alisha">By Zander Ft. Alisha</string>
    <string name="_04_45">04:45</string>
    <string name="pick_image_from_gallery">PICK IMAGE FROM GALLERY</string>
    <string name="text_images">%1$d Images</string>
    <string name="text_button_done">Done</string>
    <string name="text_title_activity_album">Select photos</string>
    <string name="text_title_dialog_sort_by_album">Sort album by</string>
    <string name="text_title_dialog_sort_by_photo">Sort photo by</string>
    <string name="action_sort">Sort</string>
    <string name="txt_events">Events</string>
    <string name="txt_upcoming_events">Upcoming Events</string>
    <string name="txt_add_events">Add Event</string>
    <string name="txt_past_events">Past Events</string>
    <string name="err_event_name">Enter the event name</string>
    <string name="err_event_desc">Enter event description</string>
    <string name="err_event_start_date">Enter the start date</string>
    <string name="err_event_end_date">Enter the end date</string>
    <string name="err_event_start_time">Enter the start time</string>
    <string name="err_event_end_time">Enter the end time</string>
    <string name="err_event_guest_count">Enter the guest count</string>
    <string name="err_event_guest_budget_0">Guest budget must not be 0</string>
    <string name="err_to_date_before">To date must be after from date</string>
    <string name="str_select_time">Select Time</string>
    <string name="err_to_time_before">To time after from time</string>
    <string name="err_event_type">Select event type</string>
    <string name="str_venue_name">Venue Name</string>
    <string name="str_about_venue">About Venue*</string>
    <string name="str_address">Address*</string>
    <string name="str_venue_capacity">Capacity*</string>
    <string name="txt_capacity">Capacity</string>
</resources>