<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    tools:context=".artist.activity.PrivacyPolicyActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <com.musicseque.Fonts.Noyhr
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_attach"
                android:background="@android:color/transparent"
                android:text="@string/policy1"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />

            <com.musicseque.Fonts.Noyhr
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/img_attach"
                android:background="@android:color/transparent"
                android:text="@string/policy2"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />

            <com.musicseque.Fonts.Noyhr
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/img_attach"
                android:background="@android:color/transparent"
                android:text="@string/policy3"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />

            <com.musicseque.Fonts.Noyhr
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/img_attach"
                android:background="@android:color/transparent"
                android:text="@string/policy_heading"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.musicseque.Fonts.Noyhr
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_attach"
                android:background="@android:color/transparent"
                android:text="@string/policy4"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />

            <com.musicseque.Fonts.Noyhr
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/img_attach"
                android:background="@android:color/transparent"
                android:text="@string/policy5"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>