<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05151D"
    android:padding="10dp">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <com.musicseque.Fonts.Noyhr
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:layout_centerHorizontal="true"

            android:text="@string/txt_verify_account"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/_20sdp" />

        <com.musicseque.Fonts.Noyhr
            android:id="@+id/texsst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:text="@string/str_verify_account_txt"
            android:textColor="#ffffff"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texsst"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_pasw"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/email" />

            <com.musicseque.Fonts.NoyhrEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:enabled="false"
                android:layout_toRightOf="@+id/img_pasw"
                android:background="@android:color/transparent"
                android:hint="@string/str_hint_email"
                android:text=""
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="@dimen/_10sdp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="@dimen/_16sdp"
              />

        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rel1"
            android:background="#BDBDBD" />

        <!--<com.musicseque.Fonts.Noyhr-->
            <!--android:id="@+id/btnChangeEmail"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/str_change_email"-->
            <!--android:layout_below="@+id/view1"-->
            <!--android:background="@drawable/rectangle_orange_border"-->
            <!--android:padding="@dimen/_5sdp"-->
            <!--android:layout_marginTop="@dimen/_5sdp"-->
            <!--android:textColor="@color/color_white"-->
            <!--android:layout_alignParentRight="true"/>-->
        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_pasw_1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_otp" />

            <com.musicseque.Fonts.NoyhrEditText
                android:id="@+id/etOTP"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/img_pasw_1"
                android:background="@android:color/transparent"
                android:hint="@string/str_hint_otp"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="@dimen/_10sdp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="@dimen/_16sdp"/>
        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rel2"
            android:background="#BDBDBD" />



        <com.musicseque.Fonts.Noyhr
            android:id="@+id/btnResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_resend_otp_btn"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/color_orange" />

        <com.musicseque.Fonts.CustomButton
            android:id="@+id/btnVerifyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnResendOTP"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/color_orange"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/txt_btn_verify_account"
            android:textColor="@color/color_white" />

        <com.musicseque.Fonts.CustomButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnVerifyAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"

            android:background="@drawable/rectangle_orange_border"
            android:text="@string/txt_cancel"
            android:textColor="@color/color_white"
            />

    </RelativeLayout>
</ScrollView>
</RelativeLayout>