<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05151D"
    android:padding="10dp">


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <com.musicseque.Fonts.Noyhr
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"

            android:text="@string/txt_forgot_password"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/_20sdp" />

        <com.musicseque.Fonts.Noyhr
            android:id="@+id/texsst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/txt_forgot_password_txt"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_14sdp" />

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texsst"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_pasw"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/email" />

            <com.musicseque.Fonts.NoyhrEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_pasw"
                android:background="@android:color/transparent"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:textSize="@dimen/_16sdp" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/rel3"
            android:background="#BDBDBD" />

        <com.musicseque.Fonts.CustomButton
            android:id="@+id/btn_reset_pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="#F87A42"
            android:padding="@dimen/_10sdp"
            android:text="Submit"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_14sdp" />


        <com.musicseque.Fonts.CustomButton
            android:id="@+id/btn_cancel"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_reset_pas"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/rectangle_orange_border"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_cancel"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_14sdp"

            />


        <!--<Button-->
        <!--android:id="@+id/btn_cancel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/btn_reset_pas"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="@dimen/_20sdp"-->
        <!--android:background="#F87A42"-->
        <!--android:padding="@dimen/_10sdp"-->
        <!--android:textSize="@dimen/_16sdp"-->

        <!--android:text="Cancel"-->
        <!--android:textColor="@color/color_white" />-->

    </RelativeLayout>

</RelativeLayout>